--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,9 @@
 @import 'blocks/header';
 @import 'blocks/first';
 @import 'blocks/second';
+@import 'blocks/third';
+@import 'blocks/fourth';
+@import 'blocks/fifth';
 
 @import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400;500&display=swap');
