--- a/src/scss/blocks/_sixth.scss
+++ b/src/scss/blocks/_sixth.scss
@@ -1,6 +1,7 @@
 .sixth-block {
-    margin-top: 140px auto auto;
+    margin: 140px auto auto;
     width: 100%;
+    height: 1022px;
 
     &__title {
         font-family: $ff;
