--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,9 @@
 @import 'blocks/song';
 @import 'blocks/tab';
 @import 'blocks/hotel';
+@import 'blocks/wedding';
+@import 'blocks/team';
+@import 'blocks/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400;500&display=swap');
